--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit>=1.31.0
 ultralytics>=8.0.20
-deepface>=0.0.79
-Pillow>=10.0.0
-opencv-python-headless>=4.8.0.74
+deepface==0.0.79
+Pillow
+opencv-python-headless
