--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 streamlit>=1.32.0
 ultralytics>=8.0.0
 Pillow>=10.0.0
-numpy>=1.24.0
 opencv-python-headless>=4.7.0
-deepface>=0.0.79
-torch>=2.0.0
+deepface==0.0.79  # Explicitly specify version
+tensorflow>=2.12.0  # Required by DeepFace
+pandas>=2.0.0  # Required by DeepFace
+numpy>=1.24.0
+torch>=2.0.0 --extra-index-url https://download.pytorch.org/whl/cpu  # CPU-only (smaller)
 torchvision>=0.15.0
-pandas>=2.0.0
-tqdm>=4.0.0
-gdown>=4.7.1
-requests>=2.31.0
+gdown>=4.7.1  # For downloading model weights
